# jpeg-augumentation

./: .gitignore  README.md  cjpeg.txt  cjpegli.txt  goals.md  guetzli.txt  jpeg.txt  pyproject.toml
.codex/: config.yaml
jpeg_variety/: __init__.py  cli.py  config.py  encoder_sampling.py  pipeline.py
jpeg_variety/encoders/: __init__.py  base.py  cjpeg_encoder.py  cjpegli_encoder.py  fraunhofer_jpeg_encoder.py  guetzli_encoder.py
jpeg_variety/utils/: files.py  image.py  quant_tables.py  rng.py  sampling.py  subprocess.py
